--- a/index.html
+++ b/index.html
@@ -1,16 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KKUK RPG</title>
+    <title>Role Playing Game</title>
     <link rel="stylesheet" href="./assets/css/reset.css">
+    <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Laila" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
-    
+    <div class="header-container">
+        <div class="grid-item-header">Role Playing Game</div>
+    </div>
+    <div class="game-container">
+        <div class="grid-item" id="me"></div>
+        <div class="grid-item" id="message">Click on an image to choose your character</div>
+        <div class="grid-item" id="defender"></div>
+        <div class="grid-item" id="attackBtn">
+            <button type="button" class="btn btn-danger" id="attack" onclick="attackRound()">Attack</button>
+        </div>
+        <div class="grid-item" id="resetBtn">
+            <button type="button" class="btn btn-secondary" id="reset" onclick="init()">Reset</button>
+        </div>
+    </div>
+    <div class="player-container">
+        <div class="playerCell" id="kris">
+            Kris<br>
+            <img src="./assets/images/kris.jpg"><br>
+            <p id="krisHS"></p>
+        </div>
+        <div class="playerCell" id="kim">
+            Kim<br>
+            <img src="./assets/images/kim.jpg"><br>
+            <p id="kimHS"></p>
+        </div>
+        <div class="playerCell" id="kourtney">
+            Kourtney<br>
+            <img src="./assets/images/kourtney.jpg"><br>
+            <p id="kourtneyHS"></p>
+        </div>
+        <div class="playerCell" id="khloe">
+            Khloe<br>
+            <img src="./assets/images/khloe.jpg"><br>
+            <p id="khloeHS"></p>
+        </div>
+    </div>
 
 
     <script src="./assets/javascript/game.js"></script>
 </body>
+
 </html>
