attack round and messge update working

--- a/index.html
+++ b/index.html
@@ -16,9 +16,18 @@
         <div class="grid-item-header">Role Playing Game</div>
     </div>
     <div class="game-container">
-        <div class="grid-item" id="me"></div>
+        <div class="grid-item" id="me">
+            Kris<br>
+            <img src="./assets/images/kris.jpg"><br>
+            <p id="krisHS"></p>
+
+        </div>
         <div class="grid-item" id="message">Click on an image to choose your character</div>
-        <div class="grid-item" id="defender"></div>
+        <div class="grid-item" id="defender">
+            Kim<br>
+            <img src="./assets/images/kim.jpg"><br>
+            <p id="kimHS"></p>
+        </div>
         <div class="grid-item" id="attackBtn">
             <button type="button" class="btn btn-danger" id="attack" onclick="attackRound()">Attack</button>
         </div>
