--- a/index.html
+++ b/index.html
@@ -16,18 +16,9 @@
         <div class="grid-item-header">Role Playing Game</div>
     </div>
     <div class="game-container">
-        <div class="grid-item" id="me">
-            Kris<br>
-            <img src="./assets/images/kris.jpg"><br>
-            <p id="krisHS"></p>
-
-        </div>
+        <div class="grid-item" id="me"></div>
         <div class="grid-item" id="message">Click on an image to choose your character</div>
-        <div class="grid-item" id="defender">
-            Kim<br>
-            <img src="./assets/images/kim.jpg"><br>
-            <p id="kimHS"></p>
-        </div>
+        <div class="grid-item" id="defender"></div>
         <div class="grid-item" id="attackBtn">
             <button type="button" class="btn btn-danger" id="attack" onclick="attackRound()">Attack</button>
         </div>
@@ -36,26 +27,10 @@
         </div>
     </div>
     <div class="player-container">
-        <div class="playerCell" id="kris">
-            Kris<br>
-            <img src="./assets/images/kris.jpg"><br>
-            <p id="krisHS"></p>
-        </div>
-        <div class="playerCell" id="kim">
-            Kim<br>
-            <img src="./assets/images/kim.jpg"><br>
-            <p id="kimHS"></p>
-        </div>
-        <div class="playerCell" id="kourtney">
-            Kourtney<br>
-            <img src="./assets/images/kourtney.jpg"><br>
-            <p id="kourtneyHS"></p>
-        </div>
-        <div class="playerCell" id="khloe">
-            Khloe<br>
-            <img src="./assets/images/khloe.jpg"><br>
-            <p id="khloeHS"></p>
-        </div>
+        <div class="playerCell" id="Kris"></div>
+        <div class="playerCell" id="Kim"></div>
+        <div class="playerCell" id="Kourtney"></div>
+        <div class="playerCell" id="Khloe"></div>
     </div>
 
 
