final for submission

--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
         <div class="grid-item" id="message">Click on an image to choose your character</div>
         <div class="grid-item" id="defender"></div>
         <div class="grid-item" id="attackBtn">
+            <!-- the plan is to create the buttons from the javascript file - hope to get that done before this is graded -->
             <button type="button" class="btn btn-danger" id="attack" onclick="attackRound()">Attack</button>
         </div>
         <div class="grid-item" id="resetBtn">
+            <!-- the reset button is not working the way i want it to - best to refresh the page -->
             <button type="button" class="btn btn-secondary" id="reset" onclick="init()">Reset</button>
         </div>
     </div>
